Avoid selection of text on mobile devices

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -7,6 +7,7 @@ header {
   left: 50%;
   transform: translateX(-50%);
   pointer-events: none;
+  user-select: none;
 
   h1 {
     font-size: 3rem;
